cleaned up minor alignment issues, now time to build new page

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -74,25 +74,28 @@ width: 66%;
 margin: 0 auto;
 }
 
-header nav{
-/* width: 5%; */
+header {
+	display: flex;
+	justify-content: space-evenly;
+}
+nav {
+width: 100%;
 /* height: 10%; */
 display: flex;
 justify-content: space-evenly;
-align-items: center;
-border: 0%;
+/* border: 2px solid red; */
 padding: 2%;
 /* margin: 0 2%; */
 /* display: inline-block; */
 color: grey;
 /* letter-spacing: ; */
 /* text-align: justify; */
-/* vertical-align: middle; */
+vertical-align: middle;
 }
 
 .logo {
-/* margin-left: 15%; */
-/* vertical-align: middle; */
+margin-left: 15%;
+vertical-align: middle;
 /* border: 1px solid red; */
 /* justify-content: space-between; */
 }
@@ -128,14 +131,14 @@ padding: 2%;
 
 /*================= Animation of "Start Now===================*/
 .flip-2-hor-top-1 {
-	background-color: black;
+	/* background-color: black; */
 	color: white;
 	margin: 0 auto;
-	width: 50%;
+	width:60%;
 	margin: 20%;
-	border: 2px solid black;
+	/* border: 2px solid black; */
 	font-size: 1.5rem;
-	padding: 4%;
+	/* padding: 4%; */
 	-webkit-animation: flip-2-hor-top-1 3s cubic-bezier(0.5, 0.5, 0.515, 1) both;
 	        animation: flip-2-hor-top-1 3s cubic-bezier(0.5, 0.5, 0.5, 0.5) both infinite;
 }
